[FIX] calendar: updated layout for overlapping divs
This ensures that the "fc-daygrid-bg-harness" div does not overlap
over the "fc-more-link" for day and week view.

When configured to have "everybody's calendar" selected, for day
and weekly view, the "+x more" clickable link is overlapped by a
"fc-daygrid-bg-harness" div, making it impossible for the user to
select click this link. The fix serves to push the overlapping
div back to ensure the user can click on the more link.

Note: This issue can be reproduced by using a weekend day, as it
by default will have the overlapping div since it is a non
business day.

Steps to reproduce issue:
	- Select day / week view on calendar view
	- Create 6+ more events on a weekend day
	- Try and click the "+x more" button

opw-4879528

--- a/addons/web/static/src/views/calendar/calendar_renderer.scss
+++ b/addons/web/static/src/views/calendar/calendar_renderer.scss
@@ -180,6 +180,10 @@
             background-color: rgba($gray-200, .5);
         }
 
+        .fc-daygrid-bg-harness {
+            z-index: -1;
+        }
+
         // ======  Specific agenda types ======
         // ====================================
 
